# flappybirb

./: Cargo.toml  README.md  sprite_fragment.frag  sprite_vertex.vert
src/: background.rs  bird.rs  gamestate.rs  ground.rs  main.rs  pipes.rs  renderer.rs  shader.rs  texture.rs  ui.rs  util.rs  vertex.rs
