[package]
name = "flappybirb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
egui = "0.23.0"
egui_glium = "0.23.0"
env_logger = "0.10.1"
glium = "0.33.0"
image = "0.24.7"
log = "0.4.20"
nalgebra = "0.32.3"
nalgebra-glm = "0.18.0"
soloud = "1.0.5"
winit = "0.28.7"
